# Concurrent-Connections-Developing-a-TCP-Protocol-Based-System-in-C-

./: .gitignore  CLI.h  CMakeLists.txt  CanberraDistance.cpp  CanberraDistance.h  ChebyshevDistance.cpp  Client.cpp  DisplayCommand.cpp  Distance.cpp  DownloadCommand.cpp  DownloadCommand.h  EuclideanDistance.cpp  EuclideanDistance.h  IOClass.h  Knn.h  MinkowskiDistance.h  README.md  Server.cpp  SettingsCommand.cpp  TaxicabGeometry.h  ThreadSync.cpp  ThreadSync.h  Values.cpp  Values.h  beans_Classified.csv  makefile
Algorithms/: ChebyshevDistance.h  Distance.h  Knn.cpp  Knn.h  MinkowskiDistance.cpp  TaxicabGeometry.cpp
Command_pattern/: CLI.cpp  CLI.h  ClassifyCommand.cpp  ClassifyCommand.h  Command.cpp  Command.h  DisplayCommand.cpp  DisplayCommand.h  DownloadCommand.cpp  DownloadCommand.h  ExitCommand.cpp  ExitCommand.h  SettingsCommand.cpp  SettingsCommand.h  UploadCommand.cpp  UploadCommand.h
IOClass/: DefaultIO.h  FileIO.cpp  FileIO.h  IOClass.cpp  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
